--- a/src/pages/JoinList.module.css
+++ b/src/pages/JoinList.module.css
@@ -69,7 +69,8 @@
     border-radius: 0.5rem;
     font-size: 1rem;
     font-family: inherit;
-    transition: all 0.2s;
+    font-family: inherit;
+    transition: border-color 0.2s, box-shadow 0.2s;
     background-color: var(--background-search);
     color: var(--text-light);
     caret-color: var(--primary);
